# ZJURaft

./: .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/include/: raft.h  status.h  storage.h
src/protob/: grpc_generator.sh  raft.grpc.pb.cc  raft.grpc.pb.h  raft.pb.cc  raft.pb.h  raft.proto
src/protob/scripts/: generate_grpc_code.sh  install_grpc.sh
src/raft/: raft.cpp
test/: CMakeLists.txt  smaple_test.cpp
